[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://vox/enemy0.vox" type="ArrayMesh" id=3]
[ext_resource path="res://vox/enemy2.vox" type="ArrayMesh" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.7, 1, 0.7 )

[sub_resource type="Animation" id=2]
resource_name = "loop"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:mesh")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ) ]
}

[node name="enemy" type="StaticBody" groups=[
"enemy",
]]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = ExtResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="ray_d" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, 2 )

[node name="ray_u" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -2 )

[node name="ray_l" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 2, 0, 0 )

[node name="ray_r" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( -2, 0, 0 )

[node name="tw" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "loop"
playback_speed = 2.0
anims/loop = SubResource( 2 )
